# exploring-rust

./: .gitignore  Cargo.toml  README.md
1_programming_rust_book/: Cargo.toml
1_programming_rust_book/src/chapter_2/: example_3_b.rs  example_4_a.rs  example_4_c.rs  example_4_d.rs  example_4_e.rs
1_programming_rust_book/src/chapter_3/: README.md
2_udemy_ultimate_rust_crash_course/problem_solving/ex3_simple_types/: Cargo.toml
2_udemy_ultimate_rust_crash_course/problem_solving/ex3_simple_types/src/: lib.rs
2_udemy_ultimate_rust_crash_course/problem_solving/ex4_control_flow_strings/: Cargo.toml
2_udemy_ultimate_rust_crash_course/problem_solving/ex4_control_flow_strings/src/: main.rs
2_udemy_ultimate_rust_crash_course/problem_solving/ex5_referecne_borrow/: Cargo.toml
2_udemy_ultimate_rust_crash_course/problem_solving/ex5_referecne_borrow/src/: main.rs
3_lets_get_rusty/vid_11_traits/src/: main.rs
3_lets_get_rusty/vid_6_enums/: Cargo.toml
3_lets_get_rusty/vid_6_enums/src/: main.rs
3_lets_get_rusty/vid_7_restaurant/: Cargo.toml
3_lets_get_rusty/vid_7_restaurant/src/: lib.rs
3_lets_get_rusty/vid_7_restaurant/src/front_of_house/: hosting.rs
4_the_rust_programming_lanaguage/chapter_2_guessing_game/: Cargo.toml
asynchronous-rust/tokio/mini-redis/: Cargo.toml  README.md  text.txt
asynchronous-rust/tokio/mini-redis/examples/: chat.rs  client.rs  hello_world.rs  i-o.rs  shared_state.rs  spawning.rs
asynchronous-rust/tokio/mini-redis/src/: db.rs  lib.rs  server.rs
codility/1_iterations/binary-gap/: Cargo.toml
codility/1_iterations/binary-gap/src/: main.rs
comprehensive_rust/u5_types_variables/: Cargo.toml
comprehensive_rust/u6_control_flow_basics/: Cargo.toml
cryptography/halo2/zk_wordle/: Cargo.toml
cryptography/halo2/zk_wordle/src/: wordle.rs
cryptography/halo2/zk_wordle/src/wordle/: wordle.rs
cryptography/halo2/zk_wordle/src/wordle/wordle/: table.rs
cryptography/hash_functions/poseidon_k256/src/: lib.rs
halo2/ecdsa/: Cargo.toml
halo2/simple_example/: Cargo.toml
hello_rust/src/: main.rs  main.test.rs
hello_rust/src/chapter_2/: README.md  example_2.rs  example_3.rs
hello_world/: hello_world  hello_world.rs
learning_rust/: README.md
learning_rust/1_programming_rust_book/src/chapter_2/: example_3_b.rs  example_4_c.rs  example_4_d.rs
learning_rust/2_udemy_ultimate_rust_crash_course/ex5_referecne_borrow/src/: main.rs
learning_rust/3_lets_get_rusty/vid_11_traits/: Cargo.toml
learning_rust/3_lets_get_rusty/vid_7_modules/: Cargo.toml
tokio-block-reader/: Cargo.toml
tokio-block-reader/src/: main.rs
(+1 files in other folders)
