[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
mini-redis = "0.4"
anyhow = "1.0.93"
bytes = "1.8.0"
tokio-stream = "0.1.16"
futures = "0.3.31"
