[package]
name = "zk_wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
group = "0.13"
